Generate barcodes from ISBNs and user card_ids

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,5 @@ library_project/imported_data.csv
 library_project/cert.key
 library_project/cert.crt
 library_project/library/migrations
+library_project/book_isbn_images/*
+library_project/card_id_images/*
